# DM2025-Lab2-Exercise

./: .gitignore  DM2025-Lab2-Homework.ipynb  DM2025-Lab2-Master-Phase_1.ipynb  pyproject.toml
data/: test_df.pkl  train_df.pkl
logs/: training_log.csv
