[project]
name = "dm2025-lab2-exercise"
version = "0.1.0"
description = "NTHU ISA5810 Data Mining - Lab 2"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.0",
    "gensim>=4.4.0",
    "google-genai>=1.47.0",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "keras>=3.12.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-google-genai>=3.0.0",
    "langextract>=1.0.9",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "umap-learn>=0.5.9.post2",
]
